--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <style>
         @font-face{
         font-family:autography;
-        src:url('autography.ttf');
+        src:url('autography.otf');
     } 
     @font-face{
         font-family:CaviarDreams;
         src:url('CaviarDreams.ttf');
     }
-	body{background-color:#e2e1d6;}
+	body{
+        background-color:#e2e1d6;
+        }
         header div{
             background-color:#1f2720;
             height: 650px;
@@ -192,9 +194,9 @@
         }
         .secao_5{
             background:#e2e1d6;
-            height: 1300px;
+            height: 1000px;
             padding-top: 5%;
-            padding-left: 20%;
+            padding-left: 18%;
             padding-right: 25%;
         }
         .secao_5 img{
@@ -217,8 +219,16 @@
             opacity: 80%;
         }
         footer{
-            height: 600px;
-            background-color:#1f2720 ;
+            height: 200px;
+            background-color:#161b17 ;
+        }
+        footer p{
+            color: white;
+            font-family:CaviarDreams;
+            padding:5%;
+            width: 20%;
+            margin-left: 35%;
+
         }
 
         
@@ -284,6 +294,8 @@
             <div class="card_secao5"><p>Júlia e Pedro</p><img class="" src="imagens/casal10.png"> </div> 
         </div> 
         <footer>
+            <p>Rua Fictícia Numero 999<br>@Contato_Ficticio<br>Tel:(53) 32222-2222</p>
+
 
         </footer>    
     </section>
