--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             background-color: rgb(219, 219, 191);
         }
         .bloco_text1 p{
-            font-family:arial;
+            font-family:CaviarDreams;
             width: 50%;
             padding: 10%;
         }
         .bloco_text2 p{
-            font-family:arial;
+            font-family:CaviarDreams;
             float: right;
             width: 50%;
             padding: 10%;
@@ -82,7 +82,7 @@
         .secao_2 p{
             color: #e2e1d6;
             padding: 20%;
-            font-family:arial;
+            font-family:CaviarDreams;
             font-size: 20px;
             width: 50%;
             margin-left:5%;
@@ -117,7 +117,7 @@
         .secao_3 .div_text p{
             padding: 10%;
             width: 100%;
-            font-family: arial;
+            font-family: CaviarDreams;
             color:#1f2720;
         }
         
